crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_function.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "statement().parse(\"fn foo() { 20 }\")"
---
Ok:
  - Function:
      name:
        - foo
        - start: 2
          end: 6
      type_parameters: ~
      params: []
      return_type: ~
      body:
        - stmts: []
          end_expr:
            - Value:
                I32: 20
            - start: 11
              end: 13
        - start: 8
          end: 15
  - start: 0
    end: 15

