crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_import_statement-2.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "stmt().parse(r#\"import { foo, bar } from \"./baz\";\"#)"
---
Ok:
  - Import:
      ty:
        - Internal
        - start: 7
          end: 8
      default_import: ~
      named_imports:
        - - foo
          - start: 8
            end: 12
        - - bar
          - start: 13
            end: 18
      path:
        - "./baz"
        - start: 25
          end: 32
  - start: 0
    end: 33

