crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_int-2.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"2\")"
---
Ok:
  - Value:
      I32: 2
  - start: 0
    end: 1

