crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_int.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"10\")"
---
Ok:
  - Value:
      I32: 10
  - start: 0
    end: 2

